# SafetyEnvelopes

./: .gitattributes  .gitignore  .gitmodules  README.md  dagger.py  losses.py  sbatch.py  utils.py
analysis/: box.py  kitti_sizes.py  kitti_sizes.txt  main.py
common/: buffers.py
config/: eval.yaml  lc_device.yaml  real_env.yaml  sim_env.yaml  zoo.yaml
config/dagger/bevnet/: all.yaml  real_world_all.yaml  scene5.yaml
config/dagger/cnn1d/: all.yaml  scene5.yaml
config/dagger/ersnet/: all.yaml  scene5.yaml
config/dagger/vanilla_res/: all.yaml  scene5.yaml
config/lc/: real.yaml  synthia.yaml
config/networks/: bevnet.yaml  cnn1d.yaml  ersnet.yaml
config/ppo/bevnet/: all.yaml  scene5.yaml
config/ppo/ersnet/: all.yaml  scene5.yaml
cpp/: CMakeLists.txt
cpp/include/: setcpp.h
cpp/python/: setcpp.cpp
cpp/src/: setcpp.cpp
data/: synthia.py  vkitti.py
data/SynthiaVideoSets/: mini_test.txt  mini_train.txt
data/VKittiVideoSets/: test_vkitti.txt  vid2metadata.txt
devices/: light_curtain.py
envs/: env.py  real.py  sim.py
eval/: main.py
eval/metrics/: __init__.py  huber.py  ser.py  spa.py  standard.py
policies/actors/: __init__.py  actor.py  baseline.py  identity.py  velocity.py  zoo.py
policies/actors/nn/features/: absolute.py  (+1 more)
policies/critics/: __init__.py  critic.py  res_1d.py
run/: real.py  runner.py  sim.py
visualizer/backend/: rossub.py  utils.py
visualizer/frontend/figs/: forecasting.html  random_curtains.html  safety_envelope.html
visualizer/frontend/real/: index.html  tracks.html
visualizer/frontend/sim/: index.html
(+19 files in other folders)
